--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ description: >-
 baseurl: "" # the subpath of your site, e.g. /blog
 domain: tuvior.github.io
 url: https://tuvior.github.io # the base hostname & protocol for your site, e.g. http://example.com
-favicon: "/assets/favicon.ico" # the favicon for your site
+favicon: "/assets/images/favicon.ico" # the favicon for your site
 
 # Yat date format
 # refer to https://shopify.github.io/liquid/filters/date/ if you want to customize this
