--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,9 @@
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
-
 title: tuvior
 email: tobiasuztl@gmail.com
 author: tuvior
 description: >-
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-
+  A blog about random tech related things I do, 
+  professionally or not.
 remote_theme: jeffreytse/jekyll-theme-yat
 
 # Copyright setting
@@ -22,6 +14,9 @@ remote_theme: jeffreytse/jekyll-theme-yat
 # * copyleft: (cleft)
 # * sound recording copyright: (p) - ℗
 copyright: "Copyright (c) 2021-{currentYear} {author}"
+
+permalink: /:title
+paginate_path: page-:num
 
 baseurl: "" 
 domain: tuvior.github.io
