Update date format

--- a/_config.yml
+++ b/_config.yml
@@ -23,10 +23,9 @@ domain: tuvior.github.io
 url: https://tuvior.github.io 
 favicon: "/assets/images/favicon.ico"
 
-# Yat date format
-# refer to https://shopify.github.io/liquid/filters/date/ if you want to customize this
+date_format: "%d %B %Y"
 yat:
-  date_format: "%b %d, %Y"
+  date_format: "%d %B %Y"
 
 # If you want to link only specific pages in your header, uncomment
 # this and add the path to the pages in order as they should show up
